configuration sequelize et BDD mySQL + ajustement des routes et vues pour le rôle admin

--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -40,7 +40,7 @@
                 <!-- ! Column droite -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong>ADRESSE -</strong>
-                        <%= adresse %>
+                        <%= street %>
                     </p>
                     <p><strong>VILLE -</strong>
                         <%= city %>
