--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -12,10 +12,10 @@
         <div class="employee-card">
           <img src="/uploads/<%= emp.avatar %>" alt="avatar" class="employee-avatar">
           <div class="employee-name"><%= emp.lname %> <%= emp.fname %></div>
-          <div class="employee-poste"><%= emp.postes.name %></div>
+          <div class="employee-poste"><%= emp.Poste ? emp.Poste.name : 'Non défini' %></div>
 
           <!-- TODO: Bouton Voir plus selon id -->
-          <a href="/voir-plus/<%= emp._id%>"><button class="btn btn-voir-plus">Voir plus</button></a>
+          <a href="/voir-plus/<%= emp.id_employee %>"><button class="btn btn-voir-plus">Voir plus</button></a>
         </div>
       </div>
       <% }) %>
