modification visu poste, ne plus touché

--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -27,7 +27,7 @@
                 <!-- ! Column gauche -->
                 <div class="d-sm-flex flex-sm-column gap-2">
                     <p><strong> POSTE - </strong>
-                        <%= poste.name %>
+                        <%= poste %>
                     </p>
                     <p><strong>EMAIL -</strong>
                         <%= email %>
