--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="d-flex flex-column align-items-center mt-1">
     <div class="logo d-flex justify-content-center p-5">
-        <img id="logo" src="ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nail's">
+        <img id="logo" src="/ASSET/img/Logo_Beige.svg" alt="Logo Ava Moon Nail's">
     </div>
     <hr>
     <div class="d-flex flex-column ">
