--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,4 +1,3 @@
-/* ? NavBar */
 header {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -65,8 +64,6 @@ header .avatar-nav:hover {
   filter: brightness(0) invert(1);
 }
 
-/* ? Footer */
-
 footer {
   margin: 0;
 }
@@ -78,17 +75,14 @@ footer #logo {
   width: 100px;
 }
 
-/* ? Main */
-
 main {
   background-color: rgba(238, 238, 238, 0.9333333333);
   padding-top: 20px;
-  height: 2000px;
+  padding-bottom: 20px;
 }
 
-/* ? Carte de l'employé */
 .employee-card {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   border-radius: 12px;
   padding: 20px;
   text-align: center;
@@ -126,8 +120,6 @@ main {
   margin-bottom: 10px;
 }
 
-/* ? Profil de l'employé */
-
 .employee-avatar-profil {
   width: 300px;
   height: 300px;
@@ -138,17 +130,3 @@ main {
   display: inline-block;
   margin-bottom: 15px;
 }/*# sourceMappingURL=style.css.map */
-
-/* ? Formulaire ajout document */
-  .card {
-    border-radius: 1rem;
-  }
-  .form-label {
-    color: #495057;
-  }
-  .is-invalid {
-    border-color: #dc3545 !important;
-  }
-  .alert-heading {
-    font-weight: 600;
-  }
