modification de la taille de l'avatar

--- a/views/pages/addDocument.ejs
+++ b/views/pages/addDocument.ejs
@@ -24,7 +24,7 @@
                    class="form-control <%= details && details.some(d => d.toLowerCase().includes('fichier')) ? 'is-invalid' : '' %>" 
                    id="document" 
                    name="document" 
-                   accept=".pdf, .doc, .docx, image/*">
+                   accept=".pdf, image/*">
           </div>
         </div>
 
