--- a/views/pages/admin/voir-plus.ejs
+++ b/views/pages/admin/voir-plus.ejs
@@ -1,59 +1,76 @@
-<div class="container bg-profil d-flex ">
-    <div class="container card d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center p-5
-        d-sm-flex flex-sm-column justify-content-sm-center align-items-sm-center gap-5">
+<div class="container bg-profil d-flex">
+    <div
+        class="container card d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center p-5 d-sm-flex flex-sm-column justify-content-sm-center align-items-sm-center gap-5">
         <div class="col-lg-4">
-            <img src="/uploads/<%= user_.avatar %>" alt="avatar" class="employee-avatar-profil">
+            <img src="/uploads/<%= user_.avatar %>" alt="avatar" class="employee-avatar-profil" />
         </div>
 
         <!-- * Carte Profil employé -->
         <div class="card-body col-8 d-flex flex-column justify-content-between gap-5">
             <div class="d-flex flex-column justify-content-center align-items-center">
-
                 <!-- * Nom complet -->
                 <h1 class="text-center">
-                    <strong> <%= user_.lname%> </strong> 
-                    <strong> <%= user_.fname%> </strong>
+                    <strong>
+                        <%= user_.lname%>
+                    </strong>
+                    <strong>
+                        <%= user_.fname%>
+                    </strong>
                 </h1>
-                <p> ( <%= user_.Poste ? user_.Poste.name : 'Non défini' %>) </p>
+                <p>( <%= user_.Poste ? user_.Poste.name : 'Non défini' %>)</p>
             </div>
 
             <!-- * Informations supplémentaires -->
-            <div class="d-lg-flex flex-lg-row justify-content-lg-around
-            d-sm-flex flex-sm-column gap-5">
-
+            <div class="d-lg-flex flex-lg-row justify-content-lg-around d-sm-flex flex-sm-column gap-5">
                 <!-- ! Column gauche -->
                 <div class="d-sm-flex flex-sm-column gap-2">
-                    <p><strong>EMAIL -</strong>
-                        <br> <%= user_.email %></p>
-                    <p><strong>TELEPHONE -</strong>
-                        <br> <%= user_.phone %></p>
-                    <p><strong> ANNIVERSAIRE - </strong> 
-                        <br> <%= user_.birth_date ? new Date(user_.birth_date).toLocaleDateString('fr-FR', { day: 'numeric', month: 'long', year: 'numeric' }) : 'Non renseigné' %> </p>
+                    <p>
+                        <strong>EMAIL -</strong> <br />
+                        <%= user_.email %>
+                    </p>
+                    <p>
+                        <strong>TELEPHONE -</strong> <br />
+                        <%= user_.phone %>
+                    </p>
+                    <p>
+                        <strong> ANNIVERSAIRE - </strong> <br />
+                        <%= user_.birth_date ? new Date(user_.birth_date).toLocaleDateString('fr-FR', { day: 'numeric' ,
+                            month: 'long' , year: 'numeric' }) : 'Non renseigné' %>
+                    </p>
                 </div>
 
                 <!-- ! Column droite -->
                 <div class="d-sm-flex flex-sm-column gap-2">
-                    <p><strong>ADRESSE -</strong> 
-                        <br> <%= user_.street %></p>
-                    <p><strong>VILLE -</strong>
-                        <br> <%= user_.city %></p>
-                    <p><strong>CODE POSTALE -</strong>
-                        <br> <%= user_.cp %></p>
+                    <p>
+                        <strong>ADRESSE -</strong> <br />
+                        <%= user_.street %>
+                    </p>
+                    <p>
+                        <strong>VILLE -</strong> <br />
+                        <%= user_.city %>
+                    </p>
+                    <p>
+                        <strong>CODE POSTALE -</strong> <br />
+                        <%= user_.cp %>
+                    </p>
                 </div>
             </div>
 
             <!-- * Observations -->
             <div class="card-body col-lg-8">
-            <div class="d-lg-flex flex-lg-column justify-content-lg-around
-            d-sm-flex flex-sm-column">
-                <p><strong>OBSERVATION :</strong> </p>
-                <p><%= user_.observation %></p>
+                <div class="d-lg-flex flex-lg-column justify-content-lg-around d-sm-flex flex-sm-column">
+                    <p><strong>OBSERVATION :</strong></p>
+                    <p>
+                        <%= user_.observation %>
+                    </p>
+                </div>
+            </div>
+
+            <!-- TODO ajouter bouton modifier et supprimer l'employé -->
+            <div class="d-flex justify-content-center gap-3">
+                <a href="" class="btn btn-warning">Modifier</a>
+                <a href="" class="btn btn-danger">Supprimer</a>
             </div>
         </div>
-
-        <!-- TODO ajouter bouton modifier et supprimer l'employé -->
-
     </div>
-    </div>
-
 </div>
