ajout du front login et division du css en divers fichiers scss

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,207 +1,13 @@
-header {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 50px;
-  padding-right: 50px;
-  background: linear-gradient(45deg, #8F95D3, #D3C4E3, #DBB1BC);
-  font-size: large;
-  border-bottom: 1px solid black;
-}
-header div {
-  color: #FFF;
-}
-header div ul {
-  list-style-type: none;
-}
-header div ul a {
-  text-decoration: none;
-  color: #FFF;
-}
-header div ul a:hover {
-  text-decoration: underline;
-  color: #89DAFF;
-}
-header #logo {
-  width: 50px;
-  transition: all 0.3s ease;
-}
-header #logo:hover {
-  content: url("/ASSET/img/Logo_Noir.svg");
-}
-header .avatar-nav {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-header .avatar-nav:hover {
-  transform: scale(1.1);
-}
-
-.gradient-navbar {
-  background: linear-gradient(45deg, #8F95D3, #D3C4E3, #DBB1BC);
-  padding: 0 15px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 1px solid black;
-}
-.gradient-navbar .container-fluid {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.gradient-navbar #logo {
-  width: 40px;
-}
-.gradient-navbar .navbar-toggler {
-  margin: 0 auto;
-}
-.gradient-navbar .navbar-toggler-icon {
-  filter: brightness(0) invert(1);
-}
-
-footer {
+body {
+  font-family: "Arial", sans-serif;
+  background-color: rgba(238, 238, 238, 0.9333333333);
   margin: 0;
-}
-footer .logo {
-  width: 50%;
-  border-bottom: 1px solid black;
-}
-footer #logo {
-  width: 100px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 main {
   background-color: rgba(238, 238, 238, 0.9333333333);
   padding-top: 20px;
   padding-bottom: 20px;
-}
-
-.employee-card {
-  background-color: #ffffff;
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.employee-avatar {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  background-color: #ddd;
-  display: inline-block;
-  margin-bottom: 15px;
-}
-
-.btn-voir-plus {
-  background-color: #66ccff;
-  border: none;
-  border-radius: 12px;
-  padding: 5px 15px;
-  color: white;
-  font-weight: 500;
-}
-
-.employee-name {
-  font-weight: 600;
-  margin-bottom: 3px;
-}
-
-.employee-poste {
-  color: #777;
-  font-size: 0.95rem;
-  margin-bottom: 10px;
-}
-
-.employee-avatar-profil {
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  background-color: #ddd;
-  display: inline-block;
-  margin-bottom: 15px;
-}
-
-/* * Classes personnalisées pour les badges de catégories */
-.badge-reglement {
-  background-color: #0d6efd !important;
-  color: white !important;
-}
-
-.badge-hygiene {
-  background-color: #dc3545 !important;
-  color: white !important;
-}
-
-.badge-produits {
-  background-color: #198754 !important;
-  color: white !important;
-}
-
-.badge-prestations {
-  background-color: #0dcaf0 !important;
-  color: black !important;
-}
-
-.badge-formation {
-  background-color: #ffc107 !important;
-  color: black !important;
-}
-
-.badge-accueil {
-  background-color: #212529 !important;
-  color: white !important;
-}
-
-.badge-administration {
-  background-color: #f8f9fa !important;
-  color: black !important;
-}
-
-.badge-organisation {
-  background-color: #8e44ad !important; 
-  color: white !important;
-}
-
-.badge-equipe {
-  background-color: #e67e22 !important; 
-  color: white !important;
-}
-
-.badge-qualite {
-  background-color: #20c997 !important; 
-  color: white !important;
-}
-
-.badge-event {
-  background-color: #6f42c1 !important; 
-  color: white !important;
-}
-
-.badge-sante {
-  background-color: #dc3545 !important; 
-  color: white !important;
-}
-
-.badge-mention {
-  background-color: #fd7e14 !important; 
-  color: white !important;
-}
-
-
-.badge-default {
-  background-color: #6c757d !important;
-  color: white !important;
-  border: 1px solid #495057 !important;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
