--- a/public/CSS/profil.scss
+++ b/public/CSS/profil.scss
@@ -1,9 +1,4 @@
-$primary-color: #8F95D3;
-$secondary-color: #89DAFF;
-$tertiaire-color: #D3C4E3;
-$quatuor-color: #DBB1BC;
-$valid-color: #64C36B;
-$white: #FFF;
+@import 'variables';
 
 .bg-profil {
     margin: auto;
