--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,12 +10,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+        <!-- ! Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" crossorigin="anonymous">
 
-        <!-- ! hideLayout -->
+
+        <!-- ! CSS -->
     <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>                                                  <!-- Permet d'enlever le style pour la page de connexion -->
     <% if (!hideLayout) { %>
         <link rel="stylesheet" href="/CSS/style.css">
         <link rel="stylesheet" href="/CSS/profil.css">
+        <link rel="stylesheet" href="/CSS/navbar.css">
+        <link rel="stylesheet" href="/CSS/footer.css">
+        <link rel="stylesheet" href="/CSS/employeeCard.css">
+    <% } else { %>
+        <!-- Styles pour la page de login -->
+        <link rel="stylesheet" href="/CSS/login.css">
     <% } %>
 
     <link rel="shortcut icon" href="/ASSET/img/Logo_Beige.svg" type="image/x-icon">
