--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -84,18 +84,111 @@
   }
 }
 @media (max-width: 768px) {
-  .login-page .vh-100 {
+  .login-page .container-fluid {
+    height: auto;
     min-height: 100vh;
   }
-  .login-form-container {
-    padding: 2rem 1rem;
+  .login-page .row {
+    flex-direction: column;
+    height: auto;
+  }
+  .login-page .col-lg-6.col-md-5 {
+    width: 100%;
+    height: 180px;
+    order: 1;
+    display: block !important;
+  }
+  .login-page .col-lg-6, .login-page .col-md-7 {
+    width: 100%;
+    order: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
   }
   .login-image-container {
-    display: none;
+    height: 180px;
+  }
+  .login-image-container .login-background-image {
+    height: 180px;
+    border-radius: 0;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
+  .login-image-container .image-overlay {
+    border-radius: 0;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
+  .login-image-container .image-overlay .overlay-content {
+    padding: 0.8rem;
+  }
+  .login-image-container .image-overlay .overlay-content h3 {
+    font-size: 1.3rem;
+    margin-bottom: 0.3rem;
+  }
+  .login-image-container .image-overlay .overlay-content p {
+    font-size: 0.85rem;
+    margin: 0;
+  }
+  .login-form-container {
+    max-width: 100%;
+    width: 100%;
+    padding: 1.5rem 1rem;
+    margin: 0;
   }
 }
-@media (max-width: 992px) {
+@media (min-width: 769px) and (max-width: 992px) {
+  .login-page .container-fluid {
+    height: auto;
+    min-height: 100vh;
+  }
+  .login-page .row {
+    flex-direction: column;
+    height: auto;
+  }
+  .login-page .col-lg-6.col-md-5 {
+    width: 100%;
+    height: 250px;
+    order: 1;
+    display: block !important;
+  }
+  .login-page .col-lg-6, .login-page .col-md-7 {
+    width: 100%;
+    order: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+  }
+  .login-image-container {
+    height: 250px;
+  }
+  .login-image-container .login-background-image {
+    height: 250px;
+    border-radius: 0;
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+  }
+  .login-image-container .image-overlay {
+    border-radius: 0;
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+  }
+  .login-image-container .image-overlay .overlay-content {
+    padding: 1.5rem;
+  }
+  .login-image-container .image-overlay .overlay-content h3 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+  }
+  .login-image-container .image-overlay .overlay-content p {
+    font-size: 1rem;
+  }
   .login-form-container {
-    max-width: 350px;
+    max-width: 500px;
+    width: 100%;
+    padding: 2rem;
+    margin: 0 auto;
   }
 }/*# sourceMappingURL=login.css.map */
