--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="/CSS/navbar.css">
         <link rel="stylesheet" href="/CSS/footer.css">
         <link rel="stylesheet" href="/CSS/employeeCard.css">
+        <link rel="stylesheet" href="/CSS/badgeDoc.css">
     <% } else { %>
         <!-- Styles pour la page de login -->
         <link rel="stylesheet" href="/CSS/login.css">
